chore: refactor exceptions for Rest API
Refs: XRDDEV-2807